--- a/src/app/modules/hosting/manage-cars/manage-cars.component.html
+++ b/src/app/modules/hosting/manage-cars/manage-cars.component.html
@@ -6,7 +6,7 @@
                     <div class="view-wrapper">
                         <div class="title">
                             <i class="far fa-eye"></i>
-                            Преглед
+                            {{'HOSTING.PREVIEW'|translate}}
                         </div>
                     </div>
                 </div>
@@ -14,7 +14,7 @@
                     <div class="reservations-wrapper">
                         <div class="title">
                             <i class="fas fa-book"></i>
-                            Резервации
+                            {{'COMMON.RESERVATIONS'|translate}}
                         </div>
                     </div>
                 </div>
@@ -22,7 +22,7 @@
                     <div class="edit-wrapper">
                         <div class="title">
                             <i class="far fa-edit"></i>
-                            Редактирай
+                            {{'HOSTING.EDIT'|translate}}
                         </div>
                     </div>
                 </div>
