--- a/src/app/modules/vehicles/car-details/car-review/car-review.component.html
+++ b/src/app/modules/vehicles/car-details/car-review/car-review.component.html
@@ -2,7 +2,7 @@
     <div class="col-6 text-left">
         <img class="renter-img" [src]="review.reservation.renter_id.photo" alt="">
         <span class="user-name">{{ review.reservation.renter_id.first_name }} {{ review.reservation.renter_id.last_name }} </span>
-        <span class="date"> {{ review.date | amLocale: "bg" | amDateFormat: "L" }}</span>
+        <span class="date"> {{ review.date | amLocale: (languageService.languageChanged | async) | amDateFormat: "L" }}</span>
     </div>
     <div class="col-6 text-right">
         <app-show-rating [rate]="review.rate"></app-show-rating>
