--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ body {
   }
 }
 
-.registered-snackbar{
+.registration-snackbar{
   position: relative;
   top: 50px !important;
   background-color: rgb(238, 238, 238);
