--- a/src/app/core/authentication/login/login.component.html
+++ b/src/app/core/authentication/login/login.component.html
@@ -12,12 +12,12 @@
 
       <mat-form-field class="col-6">
         <input type="text" placeholder="{{'HOME.AUTH.LOGIN.USERNAME'|translate}}" matInput formControlName="username" autocomplete="off" required>
-        <mat-error *ngIf="loginForm.hasError('required', 'username')">{{ 'HOME.AUTH.LOGIN.USERNAME_ERROR_EMPTY' | translate }}
+        <mat-error *ngIf="loginForm.hasError('required', 'username')">{{ 'HOME.AUTH.LOGIN.USERNAME_EMPTY_ERROR' | translate }}
         </mat-error>
       </mat-form-field>
       <mat-form-field class="col-6">
         <input type="password" placeholder="{{'HOME.AUTH.LOGIN.PASSWORD'|translate}}" matInput formControlName="password" required>
-        <mat-error *ngIf="loginForm.hasError('required', 'password')">{{ 'HOME.AUTH.LOGIN.PASSWORD_ERROR_EMPTY' | translate }}</mat-error>
+        <mat-error *ngIf="loginForm.hasError('required', 'password')">{{ 'HOME.AUTH.LOGIN.PASSWORD_EMPTY_ERROR' | translate }}</mat-error>
       </mat-form-field>
     </form>
     <div class="text-center">
