--- a/src/app/modules/hosting/add-vehicle/form-description/form-description.component.html
+++ b/src/app/modules/hosting/add-vehicle/form-description/form-description.component.html
@@ -1,20 +1,20 @@
 <div class="container text-center">
     <div class="row">
         <div class="col-12 col-md-6">
-            <h4>Добавете описание:</h4>
+            <h4>{{'HOSTING.ADD_DESC'|translate}}:</h4>
             <mat-form-field class="example-full-width col-12" appearance="fill">
-                <textarea matInput matTextareaAutosize="true" matAutosizeMinRows=15 placeholder="Напишете нещо повече за колата..."></textarea>
+                <textarea matInput matTextareaAutosize="true" matAutosizeMinRows=15 placeholder="{{'HOSTING.WRITE_DESC'|translate}}"></textarea>
             </mat-form-field>
         </div>
     
         <div class="col-12 col-md-6">
-            <h4>Добавете снимки:</h4>
+            <h4>{{'HOSTING.ADD_PICS'|translate}}:</h4>
             <app-image-upload (messageEvent)="receiveImages($event)"></app-image-upload>
         </div>
         <!-- <button mat-button (click)="show($event)">Print Info</button> -->
     </div>
 
 
-    <button mat-button matStepperPrevious>Назад</button>
-    <button mat-button matStepperNext>Напред</button>
+    <button mat-button matStepperPrevious>{{'COMMON.BACK'|translate}}</button>
+    <button mat-button matStepperNext>{{'COMMON.FORWARD'|translate}}</button>
 </div>
