--- a/src/app/modules/user/settings/settings.component.scss
+++ b/src/app/modules/user/settings/settings.component.scss
@@ -22,10 +22,14 @@
     transform: translateX(-50%);
     max-width: 300px;
     box-shadow: 0 0 14px rgb(153, 153, 153);
+    img{
+        max-width: 300px !important;
+    }
 }
 
 .current-pic{
     z-index: 10;
+    max-width: 300px !important;
 }
 
 .change-pic{
